# video2text

./: CMakeLists.txt  buildfound_text.txt  compile_commands.json
src/: .CMakeLists.txt.kate-swp  CMakeLists.txt  main.cpp
src/image/: CMakeLists.txt  image.cpp  image.hpp
src/iod/: CMakeLists.txt  iod.cpp  iod.hpp
src/ocr/: CMakeLists.txt  ocr.cpp  ocr.hpp
src/video/: CMakeLists.txt  video.cpp  video.hpp
